lobsters/services/lobsters-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lobsters
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: lobsters
#  clusterIP: None
