lobsters/services/lobsters-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lobsters
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lobsters.local
    http:
      paths:
      - path: /
        backend:
          serviceName: lobsters
          servicePort: 3000
